[metadata]
name = pyshamir
version = attr: pyshamir.__version__
url = https://github.com/konidev20/pyshamir
project_urls =
    Documentation = https://github.com/konidev20/pyshamir
    Source Code = https://github.com/konidev20/pyshamir
    Issue Tracker = https://github.com/konidev20/pyshamir/issues
license_files = file: LICENSE
author = Srigovind Nayak
author_email = sgovind.dev@outlook.com
maintainer = Srigovind Nayak
maintainer_email = sgovind.dev@outlook.com
description = Python port of Shamir key Split and Combine methods from Hashicorp Vault.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = shamir, pyshamir
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pyshamir
include_package_data = True
python_requires = >= 3.7
zip_safe = false

[flake8]
exclude = build,.git,.tox,./tests/.env
